--- a/emacs.org
+++ b/emacs.org
@@ -41,7 +41,7 @@
   ;;Let's garbage collect when focusing out of the window..
   (add-hook 'focus-out-hook #'garbage-collect)
   ;;  and saving files.
-  (add-hook 'after-save-hook       #'garbage-collect))
+  (add-hook 'after-save-hook #'garbage-collect))
 #+END_SRC
 
 * LOOKS
@@ -603,8 +603,7 @@
                                "~/org-notes"
                                "~/org-notes/lang-notes"
                                "~/org-notes-private"
-                               "~/.emacs.d"
-                               )))
+                               "~/.emacs.d")))
 #+END_SRC
 
 *** org-notes synching
@@ -899,17 +898,7 @@
       (face-spec-set face spec)))
 
   (use-package magit) ;; Needed for all magit-* stuff below
-  (dolist (face-map '(
-                      ;; (diff-hl-insert              . magit-diff-added)
-                      ;; (diff-hl-change              . ediff-current-diff-C)
-                      ;; (diff-hl-delete              . magit-diff-removed)
-                      ;; (smerge-base                 . magit-diff-base)
-                      ;; (smerge-lower                . magit-diff-added)
-                      ;; (smerge-markers              . magit-diff-conflict-heading)
-                      ;; (smerge-refined-added        . magit-diff-added-highlight)
-                      ;; (smerge-refined-removed      . magit-diff-removed-highlight)
-                      ;; (smerge-upper                . magit-diff-removed)
-                      (ediff-even-diff-A           . magit-diff-context-highlight)
+  (dolist (face-map '((ediff-even-diff-A           . magit-diff-context-highlight)
                       (ediff-even-diff-Ancestor    . magit-diff-context)
                       (ediff-even-diff-B           . magit-diff-context-highlight)
                       (ediff-even-diff-C           . magit-diff-context-highlight)
@@ -922,18 +911,7 @@
                       (ediff-current-diff-B        . magit-diff-their)
                       (ediff-fine-diff-A           . magit-diff-removed-highlight)
                       (ediff-fine-diff-Ancestor    . magit-diff-base-highlight)
-                      (ediff-fine-diff-B           . magit-diff-added-highlight)
-                      ;; (diff-header                 . magit-diff-hunk-heading)
-                      ;; (diff-context                . magit-diff-context)
-                      ;; (diff-added                  . magit-diff-added)
-                      ;; (diff-removed                . magit-diff-removed)
-                      ;; (diff-changed                . smerge-refined-changed)
-                      ;; (diff-refine-added           . magit-diff-added-highlight)
-                      ;; (diff-refine-removed         . magit-diff-removed-highlight)
-                      ;; (diff-refine-changed         . ediff-fine-diff-C)
-                      ;; (diff-indicator-added        . magit-diffstat-added)
-                      ;; (diff-indicator-removed      . magit-diffstat-removed)
-                      ))
+                      (ediff-fine-diff-B           . magit-diff-added-highlight)))
     (let* ((face (car face-map))
            (alias (cdr face-map)))
       (put face 'theme-face nil)
@@ -989,7 +967,6 @@
 
     (define-key map (kbd "p") 'beginning-of-defun)
     (define-key map (kbd "n") 'end-of-defun)
-
 
     (define-key map (kbd "u") 'cua-scroll-down)
     (define-key map (kbd "j") 'cua-scroll-up)
@@ -1131,7 +1108,6 @@
 
 (defun ds () t)
 (add-hook 'semantic-inhibit-functions  #'ds)
-
 #+END_SRC
 ** ag
 #+BEGIN_SRC emacs-lisp
